<resources>
    <string name="app_name">Book Store App</string>
    <string name="editor_activity_add_book">Add a Book</string>
    <string name="product_details_activity">Product Details</string>

    <!--Actions-->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!--Categories and hints-->
    <string name="category_product_name">Product Name</string>
    <string name="category_product_price">Price</string>
    <string name="hint_product_price">Product Price</string>
    <string name="currency">Euro</string>
    <string name="pieces">pcs.</string>
    <string name="category_product_quantity">Quantity</string>
    <string name="hint_product_quantity">Product Quantity</string>
    <string name="category_product_supplier">Supplier Name</string>
    <string name="category_supplier_phone">Phone Number</string>
    <string name="hint_supplier_phone">Supplier Phone Number</string>

    <!--Editor strings-->
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_save_book_successful">Book saved</string>
    <string name="editor_save_book_failed">Error saving book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error updating book</string>
    <string name="editor_delete_book_failed">Error deleting book</string>
    <string name="editor_delete_book_successful">Book deleted</string>

    <!--Dialogs-->
    <string name="unsaved_changes_dialog">Discard your changes and quit changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--Empty view strings-->
    <string name="rows_deleted"> row(s) deleted from book store database</string>
    <string name="empty_view_title_text">The store is currently empty...</string>
    <string name="empty_view_subtitle_text">Add books to the store</string>
    <string name="empty_view_subtitle_text_2">(book, price, quantity, supplier and phone number)</string>

    <!--Product details activity-->
    <string name="product_details_name">Product name: </string>
    <string name="quantity_available">Quantity available: </string>
    <string name="price_per_unit">Price per unit: </string>
    <string name="product_details_supplier">Supplier: </string>
    <string name="product_details_phone">Supplier\'s phone: </string>
    <string name="book_out_of_stock">Book out of stock, please order</string>
    <string name="validation_toast">Please enter </string>

    <!--Buttons-->
    <string name="sell_button">Sell</string>
    <string name="edit_button">Edit</string>
    <string name="order_button">Order</string>
    <string name="delete_button">Delete</string>
</resources>
