<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingRight="@dimen/activity_margin">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/ListViewEntry"
                android:paddingRight="8dp"
                android:text="@string/quantity_available" />
            <TextView
                android:id="@+id/quantity"
                style="@style/ListViewEntry"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/ListViewEntry"
                android:paddingRight="8dp"
                android:text="@string/price_per_unit"/>
            <TextView
                android:id="@+id/price"
                style="@style/ListViewEntry"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin">
        <Button
            android:id="@+id/sell_button"
            android:focusable="false"
            android:text="@string/sell_button"
            style="@style/ButtonStyle" />
    </LinearLayout>
</LinearLayout>